--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -9,23 +9,32 @@ server.context-path=/workFlow
 
 #≤ …´»’÷æ
 spring.output.ansi.enabled=always
+
+#MVC
+spring.resources.static-locations=classpath:/static/
+
 ########################################################
 ###FREEMARKER (FreeMarker AutoConfiguration)
 ########################################################
+# FREEMARKER (FreeMarkerAutoConfiguration)
+spring.freemarker.request-context-attribute=request
 spring.freemarker.allow-request-override=false
-spring.freemarker.cache=true
-spring.freemarker.check-template-location=true
+spring.freemarker.allow-session-override=false
+spring.freemarker.cache=false
 spring.freemarker.charset=UTF-8
+spring.freemarker.check-template-location=true
 spring.freemarker.content-type=text/html
-spring.freemarker.expose-request-attributes=true
-spring.freemarker.expose-session-attributes=true
+spring.freemarker.enabled=true
+spring.freemarker.expose-request-attributes=false
+spring.freemarker.expose-session-attributes=false
 spring.freemarker.expose-spring-macro-helpers=true
+spring.freemarker.prefer-file-system-access=true
 spring.freemarker.suffix=.ftl
 spring.freemarker.template-loader-path=classpath:/templates/
-#spring.freemarker.prefix=
-#spring.freemarker.request-context-attribute=
-#spring.freemarker.template-loader-path=classpath:/templates/ #comma-separated list
-#spring.freemarker.view-names= # whitelist of view names that can be resolved
+spring.freemarker.settings.template_update_delay=0
+spring.freemarker.settings.default_encoding=UTF-8
+spring.freemarker.settings.classic_compatible=true
+spring.freemarker.order=1
 
 ########################################################
 ###mybatis (mybatis AutoConfiguration)
