添加springboot热部署

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,8 +10,7 @@ server.context-path=/workFlow
 #≤ …´»’÷æ
 spring.output.ansi.enabled=always
 
-#MVC
-spring.resources.static-locations=classpath:/static/
+spring.devtools.restart.additional-paths= src/main/java
 
 # FREEMARKER (FreeMarkerAutoConfiguration)
 spring.freemarker.request-context-attribute=request
@@ -19,6 +18,7 @@ spring.freemarker.allow-request-override=false
 spring.freemarker.allow-session-override=false
 spring.freemarker.enabled=true
 spring.freemarker.cache=false
+spring.thymeleaf.cache=false
 spring.freemarker.charset=UTF-8
 spring.freemarker.check-template-location=true
 spring.freemarker.content-type=text/html
