添加登陆拦截器

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,6 +11,7 @@ server.context-path=/workFlow
 spring.output.ansi.enabled=always
 
 spring.devtools.restart.additional-paths= src/main/java
+spring.devtools.restart.enabled=false
 
 # FREEMARKER (FreeMarkerAutoConfiguration)
 spring.freemarker.request-context-attribute=request
