change mybatis log level

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -36,7 +36,7 @@ spring.freemarker.settings.classic_compatible=true
 ########################################################
 ###mybatis (mybatis AutoConfiguration)
 ########################################################
-logging.level.com.activiti.mapper=trace
+logging.level.com.activiti.mapper=debug
 
 ########################################################
 ###c3p0 (c3p0 AutoConfiguration)
