--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -39,7 +39,7 @@ spring.freemarker.order=1
 ########################################################
 ###mybatis (mybatis AutoConfiguration)
 ########################################################
-logging.level.com.activiti.mapper=trace
+logging.level.com.activiti.mapper=debug
 
 ########################################################
 ###c3p0 (c3p0 AutoConfiguration)  openldap
