--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,11 @@
             <version>${Quartz.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
 
     </dependencies>
 
