--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -61,12 +61,12 @@ c3p0.testConnectionOnCheckout=false
 ###mail (mail AutoConfiguration)
 ########################################################
 spring.mail.host=smtp.163.com
-spring.mail.username=activitiflowwork@163.com
-spring.mail.password=fucker12345
+spring.mail.username=activiti_workflow@163.com
+spring.mail.password=activiti8800
 spring.mail.default-encoding=UTF-8
-mail.fromMail.addr=activitiflowwork@163.com
+mail.fromMail.addr=activiti_workflow@163.com
 #测试账号邮件接收人
-test.mail.receiveAddr=1249055292@qq.com
+test.mail.receiveAddr=activiti_workflow@163.com
 
 ########################################################
 ###redis (redis AutoConfiguration)
