--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,7 +5,7 @@ server.address=127.0.0.1
 server.port=8001
 server.tomcat.max-connections=30000
 server.tomcat.max-threads=1024
-server.context-path=/workFlow
+#server.context-path=/workFlow
 
 #≤ …´»’÷æ
 spring.output.ansi.enabled=always
