--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -2,10 +2,10 @@
 ###server (server AutoConfiguration)
 ########################################################
 server.address=192.168.1.137
-server.port=8000
+server.port=8080
 server.tomcat.max-connections=30000
 server.tomcat.max-threads=1024
-server.context-path=/workFlow
+#server.context-path=/workFlow
 
 #彩色日志
 spring.output.ansi.enabled=always
@@ -64,12 +64,12 @@ c3p0.testConnectionOnCheckout=false
 ###mail (mail AutoConfiguration)
 ########################################################
 spring.mail.host=smtp.163.com
-spring.mail.username=activitiflowwork@163.com
-spring.mail.password=fucker12345
+spring.mail.username=activiti_workflow@163.com
+spring.mail.password=activiti8800
 spring.mail.default-encoding=UTF-8
-mail.fromMail.addr=activitiflowwork@163.com
+mail.fromMail.addr=activiti_workflow@163.com
 #测试账号邮件接收人
-test.mail.receiveAddr=1249055292@qq.com
+test.mail.receiveAddr=activiti_workflow@163.com
 
 ########################################################
 ###redis (redis AutoConfiguration)
