--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -5,7 +5,7 @@ server.address=192.168.1.134
 server.port=8080
 server.tomcat.max-connections=30000
 server.tomcat.max-threads=1024
-server.context-path=/mooc-workflow
+#server.context-path=/mooc-workflow
 
 #≤ …´»’÷æ
 spring.output.ansi.enabled=always
