--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -11,6 +11,7 @@ server.tomcat.max-threads=1024
 spring.output.ansi.enabled=always
 
 #MVC
+spring.mvc.static-path-pattern=/mooc-workflow
 spring.resources.static-locations=classpath:/static/
 
 ########################################################
