--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,6 +10,10 @@ server.context-path=/mooc-workflow
 #²ÊÉ«ÈÕÖ¾
 spring.output.ansi.enabled=always
 
+#MVC
+#spring.mvc.static-path-pattern=/mooc-workflow
+spring.resources.static-locations=classpath:/static/
+
 spring.devtools.restart.additional-paths= src/main/java
 spring.devtools.restart.enabled=false
 
