--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,7 @@
 ########################################################
 ###server (server AutoConfiguration)
 ########################################################
+project.environment=dev
 server.address=127.0.0.1
 server.port=8001
 server.tomcat.max-connections=30000
