优化定时任务

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -71,7 +71,7 @@ spring.mail.password=activiti8800
 spring.mail.default-encoding=UTF-8
 mail.fromMail.addr=activiti_workflow@163.com
 #测试账号邮件接收人
-test.mail.receiveAddr=activiti_workflow@163.com
+test.mail.receiveAddr=1249055292@qq.com
 
 ########################################################
 ###redis (redis AutoConfiguration)
