--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -46,9 +46,9 @@ logging.level.com.activiti.mapper=debug
 ########################################################
 ###c3p0 (c3p0 AutoConfiguration)  openldap
 ########################################################
-c3p0.jdbcUrl=jdbc:mysql://192.168.1.135:3306/activiti?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
+c3p0.jdbcUrl=jdbc:mysql://127.0.0.1:3306/activiti?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
 c3p0.user=root
-c3p0.password=
+c3p0.password=root
 c3p0.driverClass=com.mysql.jdbc.Driver
 c3p0.minPoolSize=50
 c3p0.maxPoolSize=500
