--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -48,7 +48,7 @@ logging.level.com.activiti.mapper=debug
 ########################################################
 c3p0.jdbcUrl=jdbc:mysql://127.0.0.1:3306/activiti?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
 c3p0.user=root
-c3p0.password=root
+c3p0.password=activiti
 c3p0.driverClass=com.mysql.jdbc.Driver
 c3p0.minPoolSize=50
 c3p0.maxPoolSize=500
