--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -95,3 +95,6 @@ bootstrap.servers=127.0.0.1:9092
 
 spring.datasource.sql-script-encoding=utf-8
 spring.datasource.schema=classpath:sql/*.sql
+
+spring.jackson.time-zone=GMT+8
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
